--- a/users/history/version_1_62_0.html
+++ b/users/history/version_1_62_0.html
@@ -345,6 +345,71 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/libs/geometry">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Improvements:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Union: take care that output is valid (with some exceptions),
+                      also with self-tangent polygons or shared edges
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      SVG: support boost::variant of geometries
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      SVG: coordinates are now written as double (by default) to
+                      svg
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Rename namespace concept to concepts to avoid conflicts with
+                      the newest compilers
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      New spherical intersection strategy used in relational and
+                      set operations for spherical and geographic Geometries (previously
+                      cartesian intersection strategy was used for all coordinate
+                      systems).
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12189">#12189</a>
+                      Relational operations not compiling when point types of inputs
+                      are different
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12287">#12287</a>
+                      Invalid result of rtree.query() for contains() predicate
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
           <ul>
             <li>
