Run update-pages.php

--- a/users/history/in_progress.html
+++ b/users/history/in_progress.html
@@ -208,6 +208,51 @@
       </li>
       <li>
         <div>
+          <span class="library"><a href="/doc/libs/1_63_0/libs/geometry">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Improvements:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Intersection: take care that output is valid (work in progres,
+                      not yet finished - but more is valid)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12289">#12289</a>
+                      Avoid warning/compilation error for std::cout
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12412">#12412</a>
+                      Invalid result of covered_by() with geographic Points and Boxes
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12413">#12413</a>
+                      rtree::remove() not working properly with geographic Points
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
           <span class="library"><a href="/doc/libs/1_63_0/libs/functional/hash">Hash</a>:</span>
           <ul>
             <li>
@@ -491,6 +536,57 @@
             <li>
               <div>
                 Removed obsolete bits and pieces
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/doc/libs/1_63_0/libs/test/">Test</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Boost.test v3.4 see the <a href="/doc/libs/1_63_0/libs/test/doc/html/boost_test/change_log.html">Change
+                log</a> section for more details.
+              </div>
+            </li>
+            <li>
+              <div>
+                New feature: <code><span class="identifier">per_element</span></code>
+                and <code><span class="identifier">lexicographic</span></code>
+                modifiers of <code><span class="identifier">BOOST_TEST</span></code>
+                can also be applied to string comparison
+              </div>
+            </li>
+            <li>
+              <div>
+                Breaking change: colons that appear in test case names are replaced
+                with underscores
+              </div>
+            </li>
+            <li>
+              <div>
+                Bug fixes
+                <ul>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/11756">#11756</a>, <a href="https://svn.boost.org/trac/boost/ticket/11907">#11907</a>, <a href="https://svn.boost.org/trac/boost/ticket/12339">#12339</a>, <a href="https://svn.boost.org/trac/boost/ticket/12506">#12506</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/12507">#12507</a>, <a href="https://svn.boost.org/trac/boost/ticket/12530">#12530</a>,
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/12531">#12531</a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Pull request <a href="https://github.com/boostorg/test/pull/103">PR103</a>,
+                      <a href="https://github.com/boostorg/test/pull/104">PR104</a>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
