Synapse is rejected.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -614,9 +614,10 @@ http://www.boost.org/development/website_updating.html
                     <td>Edward Diener</td>
 
                     <td>December 2, 2016 - December 11, 2016</td>
-		    <td><a href=
-			   "http://lists.boost.org/boost-announce/2016/12/0479.php">Pending</a>
-		      </td>
+		    <td><del><a href=
+			   "http://lists.boost.org/boost-announce/2016/12/0479.php">Pending</a></del><br/>
+<a href=
+			   "http://lists.boost.org/boost-announce/2016/12/0484.php">Rejected</a>		      </td>
                   </tr>
                 <tr>
                   <!-- Added November 2016 -->
