--- a/users/history/version_1_63_0.html
+++ b/users/history/version_1_63_0.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>Version 1.63.0 beta 1</title>
+  <title>Version 1.63.0</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,13 +37,13 @@
 
             <div class="section-body">
               <h2><span class=
-              "news-title">Version 1.63.0 beta 1</span></h2>
+              "news-title">Version 1.63.0</span></h2>
 
-              <p><span class=news-date">November 21st, 2016 12:09 GMT</span></p>
-              <p><a href="/doc/libs/1_63_0_b1/">Documentation</a>
-              <table class="download-table"><caption>Beta Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
-<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0.beta.1/boost_1_63_0_b1.tar.bz2">boost_1_63_0_b1.tar.bz2</a></td><td>c8b986fd57e436fd88dbc70e51d3e21efa2be3bdf835fa499b2cf6c0a8cc2985</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0.beta.1/boost_1_63_0_b1.tar.gz">boost_1_63_0_b1.tar.gz</a></td><td>745d99e4be9c0f324ec7ba15b7d228fd780067f2e8aeae2f16660a4cf6e6a051</td></tr>
-<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0.beta.1/boost_1_63_0_b1.7z">boost_1_63_0_b1.7z</a></td><td>3dbc1bca10941710755c13a00b1ae56d2d37fe90bbadcf9746203194f9d33e3a</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0.beta.1/boost_1_63_0_b1.zip">boost_1_63_0_b1.zip</a></td><td>e66bd6e2f637148c314398b92bc1f3cbdc777ee282f9de7885697afad3d9c202</td></tr></table>
+              <p><span class=news-date">December 26th, 2016 21:11 GMT</span></p>
+              <p><a href="/doc/libs/1_63_0/">Documentation</a>
+              <table class="download-table"><caption>Downloads</caption><tr><th scope="col">Platform</th><th scope="col">File</th><th scope="col">SHA256 Hash</th></tr>
+<tr><th scope="row" rowspan="2">unix</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.bz2">boost_1_63_0.tar.bz2</a></td><td>beae2529f759f6b3bf3f4969a19c2e9d6f0c503edcb2de4a61d1428519fcb3b0</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.tar.gz">boost_1_63_0.tar.gz</a></td><td>fe34a4e119798e10b8cc9e565b3b0284e9fd3977ec8a1b19586ad1dec397088b</td></tr>
+<tr><th scope="row" rowspan="2">windows</th><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.7z">boost_1_63_0.7z</a></td><td>25db3956a8d58187ac7a0702cc917e9bab47ff90baafc35e4e789dca1ce5f423</td></tr><tr><td><a href="https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.zip">boost_1_63_0.zip</a></td><td>97ce6635df1f44653a597343cd5757bb8b6b992beb3720f5fc761e3644bcbe7b</td></tr></table>
               <div class="news-description">
                 <div class="description">
 
@@ -53,7 +53,7 @@
     <ul>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/atomic/">Atomic</a>:</span>
+          <span class="library"><a href="/libs/atomic/">Atomic</a>:</span>
           <ul>
             <li>
               <div>
@@ -73,7 +73,92 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/fiber/">Fiber</a>:</span>
+          <span class="library"><a href="/libs/container/">Container</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12534">Trac
+                      #12534: <em>"flat_map fails to compile if included
+                      after type_traits is instantiated under gcc"</em></a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12577">Trac
+                      #12577: <em>"Null reference in pair.hpp triggers
+                      runtime warning with -fsanitize=undefined"</em></a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/container/pull/40">GitHub
+                      #40: <em>Fix parameter types in copy_move_algo.hpp: iterator_traits::difference_type
+                      -&gt; allocator_traits::size_type</em></a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/container/pull/41">GitHub
+                      #41: <em>Avoid -Wunreachable-code in do_allocate()</em></a>.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/context/">Context</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/11687">#11687</a> Xcode (Apple clang) and thread_local
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/12114">#12114</a> context does not preserve fpu context on ios arm64 devices
+                (fixed for other architecturs too)
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/12411">#12411</a> fpu registers not preserved with O2 optimizations in Visual
+                Studio (fixed for other architecturs too)
+              </div>
+            </li>
+            <li>
+              <div>
+                <a href="https://svn.boost.org/trac/boost/ticket/12551">#12551</a> building boost on arm64 causes error: unknown directive
+              </div>
+            </li>
+            <li>
+              <div>
+                reduced signatur for ontop-functions
+              </div>
+            </li>
+            <li>
+              <div>
+                unit-test for private fcontext-API
+              </div>
+            </li>
+            <li>
+              <div>
+                performance-test for ucontext and fcontext fixed
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/fiber/">Fiber</a>:</span>
           <ul>
             <li>
               <div>
@@ -95,7 +180,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/fusion/">Fusion</a>:</span>
+          <span class="library"><a href="/libs/fusion/">Fusion</a>:</span>
           <ul>
             <li>
               <div>
@@ -130,7 +215,52 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/functional/hash">Hash</a>:</span>
+          <span class="library"><a href="/libs/geometry">Geometry</a>:</span>
+          <ul>
+            <li>
+              <div>
+                <em>Improvements:</em>
+                <ul>
+                  <li>
+                    <div>
+                      Intersection: take care that output is valid (work in progres,
+                      not yet finished - but more is valid)
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li>
+              <div>
+                <em>Solved tickets:</em>
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12289">#12289</a>
+                      Avoid warning/compilation error for std::cout
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12412">#12412</a>
+                      Invalid result of covered_by() with geographic Points and Boxes
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12413">#12413</a>
+                      rtree::remove() not working properly with geographic Points
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/functional/hash">Hash</a>:</span>
           <ul>
             <li>
               <div>
@@ -142,7 +272,73 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/log/">Log</a>:</span>
+          <span class="library"><a href="/libs/interprocess/">Interprocess</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12499">Trac
+                      #12499 (<em>"Memory allocation fails"</em>)</a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/interprocess/pull/30">GitHub
+                      Pull #30 (<em>"Provide extension point so library
+                      user can provide default temp folder"</em>)</a>.
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      <a href="https://github.com/boostorg/interprocess/pull/31">GitHub
+                      Pull #31 (<em>"Add xsi_key(key_t) constructor"</em>)</a>.
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/intrusive/">Intrusive</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed bugs:
+                <ul>
+                  <li>
+                    <div>
+                      <a href="https://svn.boost.org/trac/boost/ticket/12556">Boost
+                      Trac #12556: <em>member_value_traits.hpp has a missing
+                      #include</em></a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/lexical_cast/">Lexical Cast</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Fixed issue found by <code><span class="special">-</span><span class="identifier">fsanitize</span><span class="special">=</span><span class="identifier">undefined</span></code> <a href="https://github.com/boostorg/lexical_cast/issues/21">#21</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/log/">Log</a>:</span>
           <ul>
             <li>
               <div>
@@ -187,6 +383,11 @@
                   </li>
                   <li>
                     <div>
+                      Fixed auto-detection of native syslog API. (<a href="https://svn.boost.org/trac/boost/ticket/12600">#12600</a>)
+                    </div>
+                  </li>
+                  <li>
+                    <div>
                       In UDP socket based syslog backend implementation, changed
                       the syslog message format for better compliance with RFC3164.
                     </div>
@@ -202,7 +403,7 @@
             </li>
             <li>
               <div>
-                See <a href="/doc/libs/1_63_0_b1/libs/log/doc/html/log/changelog.html">changelog</a>
+                See <a href="/libs/log/doc/html/log/changelog.html">changelog</a>
                 for more details.
               </div>
             </li>
@@ -211,7 +412,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/metaparse/">Metaparse</a>:</span>
+          <span class="library"><a href="/libs/metaparse/">Metaparse</a>:</span>
           <ul>
             <li>
               <div>
@@ -243,7 +444,24 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/optional/">Optional</a>:</span>
+          <span class="library"><a href="/libs/move/">Move</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Improved experimental adaptive sort algorithm performance
+              </div>
+            </li>
+            <li>
+              <div>
+                Activate BOOST_MOVE_FORCEINLINE
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/optional/">Optional</a>:</span>
           <ul>
             <li>
               <div>
@@ -255,8 +473,22 @@
             </li>
             <li>
               <div>
+                Syntax <code><span class="identifier">o</span> <span class="special">=</span>
+                <span class="special">{}</span></code> now correctly un-initializes
+                an <code><span class="identifier">optional</span></code>, just
+                like in <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">optional</span></code>.
+              </div>
+            </li>
+            <li>
+              <div>
                 Fixed <code><span class="identifier">optional</span><span class="special">&lt;</span><span class="identifier">optional</span><span class="special">&lt;</span><span class="identifier">T</span><span class="special">&gt;&amp;&gt;</span></code>
                 initialization. (<a href="https://svn.boost.org/trac/boost/ticket/12203">#12203</a>)
+              </div>
+            </li>
+            <li>
+              <div>
+                Optional constructors are sfinae-friendly. This fixes interaction
+                with <code><span class="identifier">std</span><span class="special">::</span><span class="identifier">tuple</span></code>. (<a href="https://svn.boost.org/trac/boost/ticket/12563">#12563</a>)
               </div>
             </li>
           </ul>
@@ -264,7 +496,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/phoenix/">Phoenix</a>:</span>
+          <span class="library"><a href="/libs/phoenix/">Phoenix</a>:</span>
           <ul>
             <li>
               <div>
@@ -296,7 +528,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/python/">Python</a>:</span>
+          <span class="library"><a href="/libs/python/">Python</a>:</span>
           <ul>
             <li>
               <div>
@@ -318,13 +550,64 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/type_index/">TypeIndex</a>:</span>
+          <span class="library"><a href="/libs/test/">Test</a>:</span>
+          <ul>
+            <li>
+              <div>
+                Boost.test v3.4 see the <a href="/doc/libs/1_63_0/libs/test/doc/html/boost_test/change_log.html">Change
+                log</a> section for more details.
+              </div>
+            </li>
+            <li>
+              <div>
+                New feature: <code><span class="identifier">per_element</span></code>
+                and <code><span class="identifier">lexicographic</span></code>
+                modifiers of <code><span class="identifier">BOOST_TEST</span></code>
+                can also be applied to string comparison
+              </div>
+            </li>
+            <li>
+              <div>
+                Breaking change: colons that appear in test case names are replaced
+                with underscores
+              </div>
+            </li>
+            <li>
+              <div>
+                Bug fixes
+                <ul>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/11756">#11756</a>, <a href="https://svn.boost.org/trac/boost/ticket/11907">#11907</a>, <a href="https://svn.boost.org/trac/boost/ticket/12339">#12339</a>, <a href="https://svn.boost.org/trac/boost/ticket/12506">#12506</a>,
+                      <a href="https://svn.boost.org/trac/boost/ticket/12507">#12507</a>, <a href="https://svn.boost.org/trac/boost/ticket/12530">#12530</a>,
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Trac tickets <a href="https://svn.boost.org/trac/boost/ticket/12531">#12531</a>
+                    </div>
+                  </li>
+                  <li>
+                    <div>
+                      Pull request <a href="https://github.com/boostorg/test/pull/103">PR103</a>,
+                      <a href="https://github.com/boostorg/test/pull/104">PR104</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li>
+        <div>
+          <span class="library"><a href="/libs/type_index/">TypeIndex</a>:</span>
           <ul>
             <li>
               <div>
                 Added <code><span class="identifier">runtime_cast</span></code>
                 to the library as an emulation of <code><span class="keyword">dynamic_cast</span></code>.
-                Thanks to Chris Glover for the implementation. See <a href="/doc/libs/1_63_0_b1/doc/html/boost_typeindex_header_reference.html#header.boost.type_index.runtime_cast_hpp">runtime_cast
+                Thanks to Chris Glover for the implementation. See <a href="/doc/html/boost_typeindex_header_reference.html#header.boost.type_index.runtime_cast_hpp">runtime_cast
                 reference</a> for more info.
               </div>
             </li>
@@ -340,7 +623,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/units/">Units</a>:</span>
+          <span class="library"><a href="/libs/units/">Units</a>:</span>
           <ul>
             <li>
               <div>
@@ -362,7 +645,7 @@
       </li>
       <li>
         <div>
-          <span class="library"><a href="/doc/libs/1_63_0_b1/libs/unordered/">Unordered</a>:</span>
+          <span class="library"><a href="/libs/unordered/">Unordered</a>:</span>
           <ul>
             <li>
               <div>
@@ -392,7 +675,7 @@
             </li>
             <li>
               <div>
-                See the <a href="/doc/libs/1_63_0_b1/doc/html/unordered/changes.html">changelog</a>
+                See the <a href="/doc/html/unordered/changes.html">changelog</a>
                 for more details.
               </div>
             </li>
