--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -585,6 +585,21 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+		<tr>
+                  <td>Boost 1.63.0 Released</td>
+
+                  <td></td>
+
+                  <td>Marshall Clow</td>
+
+                  <td>December 26, 2016</td>
+
+                  <td>
+                    <a href=
+                    "http://www.boost.org/users/history/version_1_63_0.html">Notes</a>
+                  </td>
+                </tr>
+
                 <tr>
                   <!-- Added October 2016 -->
                   <td>Stacktrace</td>
@@ -596,7 +611,7 @@ http://www.boost.org/development/website_updating.html
                   <td>December 14, 2016 - December 23, 2016</td>
 
 		  <td><a href=
-			 "http://lists.boost.org/boost-announce/2016/12/0483.php">Ongoing</a>
+			 "http://lists.boost.org/boost-announce/2016/12/0483.php">Pending</a>
 		  </td>
                 </tr>
 
