Safe Numerics review manager

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -413,7 +413,7 @@ http://www.boost.org/development/website_updating.html
 
                   <tr>
                     <!-- Added May 2015 -->
-                    <td>Safe Integer</td>
+                    <td>Safe Numerics</td>
 
                     <td>Robert Ramey</td>
 
@@ -428,7 +428,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Andrzej Krzemienski</td>
 
                     <td>-</td>
                   </tr>
