--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -543,6 +543,28 @@ http://www.boost.org/development/website_updating.html
                     <td>-</td>
                   </tr>
 
+                  <tr>
+                    <!-- Added February 2017 -->
+                    <td>SIMD</td>
+
+                    <td>Joel Falcou</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="">
+                        Incubator</a>
+                        <li><a href="https://github.com/NumScale/boost.simd">
+                            Github</a>
+                        <li><a href="https://developer.numscale.com/boost.simd/documentation/develop/">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Michael Caisse</td>
+
+                    <td>-</td>
+                  </tr>
+			
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
