Stacktrace re-review set.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -564,7 +564,27 @@ http://www.boost.org/development/website_updating.html
 
                     <td>-</td>
                   </tr>
-			
+
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>Stacktrace</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>
+                      <ul>
+                        <li><a href="https://github.com/apolukhin/stacktrace">
+                            Github</a>
+                        <li><a href="http://apolukhin.github.io/stacktrace/index.html">
+                        Documentation</a>
+                      </ul>
+                    </td>                     
+
+                    <td>Niall Douglas</td>
+
+                    <td>March 17, 2017 - March 26, 2017</td>
+                  </tr>
+
 		  <!--
                   <tr>
                     <!== Added February 2014 - >
