Louis Dionne will manage CallableTraits review

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -494,7 +494,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Louis Dionne</td>
 
                     <td>-</td>
                   </tr>
