safe_numerics review begins

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -412,28 +412,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <!-- Added May 2015 -->
-                    <td>Safe Numerics</td>
-
-                    <td>Robert Ramey</td>
-
-                    <td>
-                      <ul>
-                        <li><a href="http://rrsd.com/blincubator.com/bi_library/safe-numerics/?gform_post_id=426">
-                            Incubator</a>
-                        <li><a href="https://github.com/robertramey/safe_numerics">
-                            Github</a>
-                        <li><a href="http://htmlpreview.github.io/?https://github.com/robertramey/safe_numerics/master/doc/html/index.html">
-                        Documentation</a>
-                      </ul>
-                    </td>                     
-
-                    <td>Andrzej Krzemienski</td>
-
-                    <td>March 2, 2017 - March 11, 2017</td>
-                  </tr>
-		      
-                  <tr>
                     <!-- Added July 2016 -->
                     <td>Double-Ended</td>
 
@@ -628,6 +606,21 @@ http://www.boost.org/development/website_updating.html
                   </tr>
                 </thead>
 
+                  <tr>
+                    <!-- Added May 2015 -->
+                    <td>Safe Numerics</td>
+
+                    <td>Robert Ramey</td>
+
+                    <td>Andrzej Krzemienski</td>
+
+                    <td>March 2, 2017 - March 11, 2017</td>
+
+                    <td><a href=
+			   "http://lists.boost.org/boost-announce/2017/03/0491.php">Ongoing</a></a>
+		  </td>
+</tr>
+		      
 		<tr>
                   <td>Boost 1.63.0 Released</td>
 
