PolyCollection has a reviewer.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -580,7 +580,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>                     
 
-                    <td>Needed</td>
+                    <td>Ion Gaztañaga</td>
 
                     <td>-</td>
                   </tr>
