--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -540,7 +540,7 @@ http://www.boost.org/development/website_updating.html
 
                     <td>Michael Caisse</td>
 
-                    <td>-</td>
+                    <td>April 15, 2017 - April 24, 2017</td>
                   </tr>
 
                   <tr>
