--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -544,26 +544,6 @@ http://www.boost.org/development/website_updating.html
                   </tr>
 
                   <tr>
-                    <!-- Added February 2014 -->
-                    <td>Stacktrace</td>
-
-                    <td>Antony Polukhin</td>
-
-                    <td>
-                      <ul>
-                        <li><a href="https://github.com/apolukhin/stacktrace">
-                            Github</a>
-                        <li><a href="http://apolukhin.github.io/stacktrace/index.html">
-                        Documentation</a>
-                      </ul>
-                    </td>                     
-
-                    <td>Niall Douglas</td>
-
-                    <td>March 17, 2017 - March 26, 2017</td>
-                  </tr>
-
-                  <tr>
                     <!-- Added March 2017 -->
                     <td>PolyCollection</td>
 
@@ -626,6 +606,20 @@ http://www.boost.org/development/website_updating.html
                     <th>Result</th>
                   </tr>
                 </thead>
+
+                  <tr>
+                    <!-- Added February 2014 -->
+                    <td>Stacktrace</td>
+
+                    <td>Antony Polukhin</td>
+
+                    <td>Niall Douglas</td>
+
+		    <td>March 17, 2017 - March 26, 2017</td>
+
+                    <td><a href=
+			   "http://lists.boost.org/boost-announce/2017/03/0493.php">Ongoing</a></a>
+                  </tr>
 
                   <tr>
                     <!-- Added May 2015 -->
