--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -193,7 +193,7 @@ http://www.boost.org/development/website_updating.html
                       </ul>
                     </td>
 
-                    <td>Needed</td>
+                    <td>Frédéric Bron</td>
 
                     <td>-</td>
                   </tr>
