--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -631,8 +631,10 @@ http://www.boost.org/development/website_updating.html
 
                     <td>March 2, 2017 - March 16, 2017</td>
 
-                    <td><a href=
-			   "http://lists.boost.org/boost-announce/2017/03/0491.php">Ongoing</a></a>
+                    <td><del><a href=
+				"http://lists.boost.org/boost-announce/2017/03/0491.php">Ongoing</a></del><br/>
+		      <a href=
+			   "http://lists.boost.org/boost-announce/2017/03/0494.php">Conditional Accept</a>
 		  </td>
 </tr>
 		      
