updated link to countertree.

--- a/community/review_schedule.html
+++ b/community/review_schedule.html
@@ -266,14 +266,8 @@ http://www.boost.org/development/website_updating.html
                       <ul>
                         <li>
                           <a href=
-                          "https://dl.dropbox.com/u/8437476/works/countertree_code_doc.zip">
-                          Source (Dropbox)</a>
-                        </li>
-
-                        <li>
-                          <a href=
-                          "https://dl.dropbox.com/u/8437476/works/countertree/index.html">
-                          Documentation (Dropbox)</a>
+                          "https://github.com/fjtapia/countertree_2.0">
+                          Source (Github)</a>
                         </li>
                       </ul>
                     </td>
